# alchemy

./: LICENSE  README.md  zensical.toml
docs/: api-keys.md  (+3 more)
pkg/: README.md  pyproject.toml
pkg/src/alchemy/: __init__.py
pkg/src/alchemy/api/: __init__.py
pkg/src/alchemy/api/nft/: __init__.py  compute_rarity.py  get_collection_metadata.py  get_collections_for_owner.py  get_contract_metadata.py  get_contract_metadata_batch.py  get_contracts_for_owner.py  get_floor_price.py  get_nft_metadata.py  get_nft_metadata_batch.py  get_nft_sales.py  get_nfts_for_collection.py  get_nfts_for_contract.py  get_nfts_for_owner.py  get_owners_for_contract.py  get_owners_for_nft.py  get_spam_contracts.py  invalidate_contract.py  is_airdrop_nft.py  is_holder_of_contract.py  is_spam_contract.py  refresh_nft_metadata.py  report_spam.py  search_contract_metadata.py  summarize_nft_attributes.py
pkg/src/alchemy/api/portfolio/: __init__.py  nft_contracts.py  nfts.py  token_balances.py  tokens.py
pkg/src/alchemy/api/prices/: __init__.py  by_address.py  by_symbol.py  historical.py
pkg/src/alchemy/api/simulation/: __init__.py  asset_changes.py  asset_changes_bundle.py  execution.py  execution_bundle.py
pkg/src/alchemy/api/token/: __init__.py  get_token_allowance.py  get_token_balances.py  get_token_metadata.py
pkg/src/alchemy/api/transfers/: __init__.py  get_asset_transfers.py
pkg/src/alchemy/api/utility/: __init__.py  get_transaction_receipts.py
pkg/src/alchemy/core/: __init__.py  __init__.pyi  exc.py  mixin.py  validation.py
pkg/src/alchemy/core/http/: __init__.py  client.py
(+30 files in other folders)
