[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typed-alchemy"
version = "1.0.0"
authors = [
  {name="Marcel Claramunt", email="marcel@tribulnation.com"}
]
description = "A fully typed, validated async client for the Alchemy API."
license = "GPL-3.0-only"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
dependencies = [
  "typed-core", "lazy-loader", "httpx", "pydantic", "orjson",
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[tool.setuptools.package-data]
alchemy = ["py.typed", "*.pyi", "**/*.pyi"]

[project.urls]
Repository = "https://github.com/tribulnation/alchemy.git"
Documentation = "https://alchemy.tribulnation.com"
Website = "https://tribulnation.com"
